# didactic-giggle

./: .tool-versions  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.changeset/: crazy-ideas-scream.md  dirty-hornets-talk.md  evil-years-kick.md  fancy-banks-know.md  fresh-lemons-pay.md  purple-falcons-open.md  quiet-birds-repeat.md  red-peas-relate.md  ripe-radios-cough.md  soft-suns-fail.md  swift-seas-bet.md
.github/workflows/: release.yml
docs/: original_prompt.md
scripts/: tag-workflow.js
src/: config.py  health_checkifier.py  main.py
tests/: test_health_check.py
