[tool.poetry]
name = "didactic-giggle"
version = "0.1.0"
description = ""
authors = ["Jeremy Blackowiak <jcblackowiak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
PyYaml = "^6.0.2"
tld = "^0.13"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
